# ai-trader_ts

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  ecosystem.config.js  railway.toml
backend/: .env.example  .gitignore  Dockerfile  debug-db.ts  package-lock.json  package.json  test-analysis.ts  test-aster.mjs  test-aster.ts
backend/prisma/: schema.prisma
backend/scripts/: debug-users.ts
backend/src/: scheduler.ts  server.ts  worker.ts
backend/src/agents/: base-agent.ts  index.ts  market-analyst.ts  orchestrator.ts  risk-officer.ts  strategy-consultant.ts
backend/src/mcp/: index.ts  tool-registry.ts
backend/src/middleware/: auth.ts  error.ts  index.ts  logging.ts  subscription.middleware.ts  subscription.ts
backend/src/routes/: agents.ts  analysis.ts  analytics.ts  api-keys.ts  auth.ts  backtest.ts  features.ts  health.ts  index.ts  models.ts  notifications.ts  onboarding.ts  portfolio.ts  positions.ts  strategy-management.ts  strategy.ts  subscription.ts  trading.ts
backend/src/scripts/: seed-user.ts  trigger-analysis.ts
backend/src/services/: ai-service.interface.ts  analysis-trigger.service.ts  aster.service.ts  auth.service.ts  backtest.service.ts  claude.service.ts  deepseek.service.ts  (+38 more)
frontend/: Dockerfile  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: middleware.ts
rl-service/: .dockerignore  Dockerfile  PKG-INFO  SOURCES.txt  entry_points.txt  pyproject.toml  requirements.txt  requires.txt  top_level.txt
rl-service/src/: __init__.py  features.py  main.py  trading_env.py  trainer.py
(+46 files in other folders)
