[project]
name = "rl-trading-service"
version = "1.0.0"
description = "Reinforcement Learning Trading Service API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
